--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   salomon_bottom_bar: ^3.2.0
+  get: ^4.6.1
   flutter:
     sdk: flutter
 
